--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-	"markdown-pdf.scale": 0.74,
-	"markdown-pdf.margin.top": "0.750cm",
-	"markdown-pdf.margin.bottom": "0.750cm",
-	"markdown-pdf.margin.right": "0.750cm",
-	"markdown-pdf.margin.left": "0.750cm",
+  "markdown-pdf.margin.top": "0.750cm",
+  "markdown-pdf.margin.bottom": "0.750cm",
+  "markdown-pdf.margin.right": "0.750cm",
+  "markdown-pdf.margin.left": "0.750cm",
+  "markdown-pdf.scale": 0.74,
+  "markdown-pdf.styles": [".vscode/markdown-pdf.css"]
 }
