--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ Gemfile.lock
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 .rubocop-https?--*
+
+.obsidian/workspace-mobile.json
