--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,5 @@ Gemfile.lock
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 .rubocop-https?--*
 
-.obsidian/workspace-mobile.json
+.obsidian/workspace*
+
